<resources>
    <!--<string name="app_name">IotSmartChain</string>-->
    <string name="app_name">TITO</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!--<string name="title">Welcome to IotSmart</string>-->
    <string name="title">Welcome to TITO</string>

    <!-- Login/SignUp: Module -->
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">   Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_phone_number">This mobile number is invalid</string>
    <string name="error_unregister_phone_number">Unregister mobile number </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_confirm_invalid_password">Confirm password doesn\'t match or it is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_not_in_contactbook">You are not provisioned. Contact Admin.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_otp_not_match">This OTP not yet match</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="server_error">Server connection error!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="prompt_enter_emailid">Enter Mail ID</string>
    <string name="prompt_enter_psw">Enter Password</string>
    <string name="Submit_query">Submit</string>
    <string name="terms_condition">I have read and agree to the<u><b><i> terms and conditions</i></b></u>.</string>

    <!--Home screen-->
    <string name="menu_scan">Scan</string>
    <string name="menu_info">Info</string>
    <string name="menu_stop_scan">Stop Scan</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_click_here"><u>click here</u>.</string>

    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Picture</string>
    <string name="qr_code_open_flash_light">Open flash light</string>
    <string name="qr_code_close_flash_light">Close Flash Light</string>
    <string name="qr_code_auto_scan_notification">Position QR Code</string>
    <string name="qr_code_notification">Notification</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>
    <string name="title_activity_scan_qr_code">Scan</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dashboard">Dash Board</string>
    <string name="title_home">Home</string>
    <string name="menu">Menu</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_images">All Images</string>
    <string name="done">Done</string>

    <string name="permission_filepicker_rationale">Storage permission is needed to access files.</string>
    <string name="no_files_found">No Files Found</string>
    <string name="attachments_title_text" formatted="false">(%d/%d)</string>
    <string name="attachments_num" formatted="false">%d</string>
    <string name="select_photo_text">Select a media</string>
    <string name="select_doc_text">Select a document</string>
    <string name="no_camera_exists">No Application exists for camera!</string>
    <string name="dwg_title">DWG</string>
    <string name="dxf_title">DXF</string>
    <string name="pdf_title">PDF</string>
    <string name="ppt_title">PPT</string>
    <string name="word_title">DOC</string>
    <string name="excel_title">XLS</string>
    <string name="txt_title">TXT</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_videos">All Videos</string>
    <string name="all_files">All Files</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="rationale_photo_picker">We require this permission to select photo from gallery and camera.</string>
    <string name="rationale_doc_picker">We need this permission to read documents from device.</string>

    <!--BLE-->
    <string name="ble_not_supported">You device not supporting BLE</string>

    <string name="permission_needed">Permission Needed</string>
    <string name="location_permission_message">Location permission needed for BLE</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="error_bluetooth_not_supported">Your device not supporting Bluetooth</string>
    <string name="title_activity_init_floor_plan">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">settings</string>
    <string name="no_internet">No Internet Connection!!!</string>
    <string name="close">Close</string>

    <!--progressbar message-->
    <string name="progressbar_request">Please wait, processing request...</string>
    <string name="progressbar_updating">Updating</string>
    <string name="progressbar_loading">Still loading, Just a moment...</string>

    <!--alert message-->
    <string name="alert_donot_click">Please do not click on referesh or back button...</string>
    <string name="connect">Connect</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="status">Status</string>
    <string name="ble_sensor_report">BLE Sensor Report</string>
    <string name="ble_test_note">NOTE:\n1. BLE sensor should be in Power ON mode condition\n2. Before Sensor test, Please Check the BLE connection and status</string>
    <string name="test">Test</string>
    <string name="final_test_conf">Finally Sensor Test conformation from user </string>
    <string name="final_test">Final Test</string>
    <string name="conform"> Iot Sensor Test is Done </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="say_yes">Say yes to click above test</string>
    <string name="did_u_moved_sensor">Did you moved the sensor, Then say YES by clicking test</string>
    <string name="rotate_r_move_sensor">Rotate or Move the sensor device</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="array_labels">
        <item>Home</item>
        <item>Office</item>
        <item>Room</item>
        <item>Work Station</item>
        <item>Locker</item>
        <item>Guest House</item>
        <item>Home ground floor</item>
        <item>Home 1st Floor</item>
    </string-array>
</resources>
